deployments/pathweb/workloads/home-network/node-red/patches/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-red
spec:
  template:
    metadata:
      annotations:
        io.cilium.proxy-visibility: "<Egress/53/UDP/DNS>"
    spec:
      # runtimeClassName: gvisor
      priorityClassName: rfhome-high-priority
      nodeSelector:
        kubernetes.io/os: linux
        location: rfhome
      hostUsers: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: node-red
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /data/settings.js
          name: settings
          subPath: settings.js
        - mountPath: /extra-tools
          name: extra-tools
          readOnly: true
        - mountPath: /data/shared-data
          name: hass-data
          subPath: shared-data
        resources:
          requests:
            cpu: '500m'
            memory: 500M
          limits:
            cpu: '1'
            memory: 2G
      volumes:
      - name: settings
        configMap:
          name: node-red-settings
      - name: extra-tools
        emptyDir: {}
      - name: hass-data
        persistentVolumeClaim:
          claimName: home-assistant-data
    volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: "ceph-rbd"
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
