deployments/pathweb/workloads/home-network/node-red/patches/ingress-local-dns.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
  labels:
    external-dns: local-pdns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-traefik
  tls:
  - hosts:
    - nodered.services.home.yrf.me
    secretName: services-wildcard-cert
